--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -38,7 +38,7 @@
    ],
    "source": [
     "# Vamos precisar do pandas e scikit-learn\n",
-    "%pip install pandas numpy scikit-learn\n",
+    "#pip install pandas numpy scikit-learn -> Tem que ser instalado no terminal!!!\n",
     "# kaggle -> Site bom para pegar banco de dados.\n",
     "# Passo a passo\n",
     "# Passo 0 - Entender o desafio da empresa\n",
